Corrected installation of libraries

--- a/crypto/CMakeLists.txt
+++ b/crypto/CMakeLists.txt
@@ -269,7 +269,7 @@ if(WIN32 AND NOT CYGWIN)
 endif(WIN32 AND NOT CYGWIN)
 
 install(FILES ${EXHEADERS} DESTINATION ${INSTALL_INC}/openssl)
-install(TARGETS crypto DESTINATION ${INSTALL_LIB})
+install(TARGETS crypto RUNTIME DESTINATION ${INSTALL_BIN} LIBRARY DESTINATION ${INSTALL_LIB} ARCHIVE DESTINATION ${INSTALL_LIB})
 
 
 
